tests/marouter/errors/false_options/false_output/options.marouter
-n input_net.net.xml -a input_taz.taz.xml -m input_od_o.fma -o xxxx/routes.rou.xml
